0.10.3
- robustified model alloc code

0.10.2 - 11/06/2009
- fixed clean target in src folder makefile
- removed harmful inline directives from matrix and lexp_aux files
	issues compiling with recent gcc versions

0.10.1 - 06/02/2009
- added more C, TCL and Java tests
- removed CMake dependency: now using plain gnu make for buinding&distrib
- added RNG seed and generic model tcl testing scripts
- improved speed of attractor check-point function by (reproducible) randomization
- added attractor module to java bindings. Added java tests
- fixed tcl testing procedure under MSYS
- tcl bindings now use the tcl stub extension mechanism

0.10.0 - 30/05/2008
- upgraded dependency on lua 5.1.x
- added attractor module with tcl test cases, upgraded manual
- added trajectory cmd line script
- added tcl bindings
- model->errorMessage buffer now cleared before actual model loading
- fixed pkg-config support file

0.9.0 - 16/02/2008
- added tutorial chapter to documentation
- added intro section to documentation
- fixes and additions to documentation
- robustified IDMC_EPS_VALUE definition
- added pkg-config support
- added C++ compatibility directives to include files

0.8.2 - 10/12/2007
- added API documentation in texinfo (html,pdf,...) format
- upgraded java bindings to reporting new syntax error messages
- robustified idmc_model_free functions (now accepts even NULL pointers)
- added detailed syntax error message reporting to the user

0.8.1 - 07/12/2007
- fixed serious bug in Numerical Jacobian Evaluation routine
- added more testing code
- robustified error message reporting
- misc code cleaning

0.8.0 - 16/11/2007
- removed all BLAS/LAPACK fortran code. Now depending exclusively on gsl and lua
- updated dependency from gsl version 1.9 (eigenvalues for nonsymm. matrices)

0.7.0 - 06/07/2007
- added version info functions to java interface

0.6.1 - 30/06/2007
- improved version-info definitions
- fixed bug in basin_slow module

0.6.0 - 14/06/2007
- added basin_slow module