@@ -1,0 +1,9 @@
+name = "test empty desc. field"
+description = ""
+type = "D"
+parameters = {"a"}
+variables = {"b"}
+
+function f (a, b)
+  return 0
+end
